--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^18.3.2"
+    "@hapi/hapi": "^18.3.2",
+    "inert": "^5.1.3"
   }
 }
