--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "inert": "^5.1.3",
+    "lodash": "^4.17.15",
+    "pf-scrapers": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
